# cartograph-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
bench/: README.md  run_benchmark.py  summarize.py  urls.json
cartograph_ai/: __init__.py  _version.py  cli.py  exceptions.py  known_sources.json  probe.py  registry.py  schema.py  validation.py
cartograph_ai/stages/: __init__.py  claude_classify.py  html_analysis.py  http_probe.py
docs/: how-it-works.md  real-world-effectiveness.md  why-this-exists.md
docs/wiki/: Browser-Integration.md  Data-Layer-Taxonomy.md  Home.md  Project-Spec.md
tests/: test_bench_summarize.py  test_claude_classify.py  test_cli.py  test_hostility.py  test_html_analysis.py  test_http_probe.py  test_probe.py  test_registry.py  test_registry_live.py  test_schema.py  test_unverified_candidates.py  test_waf_block.py
tests/integration/: README.md  conftest.py  test_ford_smoke.py  test_nhtsa_smoke.py  test_sasaki_smoke.py
