[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cartograph-ai"
version = "0.1.0"
description = "Probe before extract. Classify how a site serves data and recommend the optimal extraction strategy."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AgentXaGent" },
]
keywords = [
    "scraping",
    "web",
    "claude",
    "anthropic",
    "data-extraction",
    "classification",
    "scraping-strategy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "anthropic>=0.40",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.45",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.5",
]


[project.scripts]
cartograph-ai = "cartograph_ai.cli:app"

[project.urls]
Homepage = "https://github.com/AgentXaGent/cartograph-ai"
Documentation = "https://github.com/AgentXaGent/cartograph-ai/blob/main/docs/how-it-works.md"
Repository = "https://github.com/AgentXaGent/cartograph-ai"
Issues = "https://github.com/AgentXaGent/cartograph-ai/issues"
Changelog = "https://github.com/AgentXaGent/cartograph-ai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["cartograph_ai"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the real Anthropic API (cost real money; deselect with '-m \"not integration\"')",
    "network: tests that hit live third-party hosts (registry URL sanity check; run explicitly with '-m network')",
]
addopts = "-m 'not integration and not network'"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
